# 3DModel_GeometryAnalysisPlatform

./: CMakeLists.txt
DeepLearningGraphData/: __init__.py  dataset.py  test.py  train.py
DeepLearningGraphData/models/: encoders.py  gnn.py  hns_net.py
app/: main.cpp
modules/ASGBuilder/: ASGBuilder.cpp  ASGBuilder.h  ASGFunction.cpp  CMakeLists.txt  pybind_module.cpp
